--- a/cb_maintenance/i18n/es.po
+++ b/cb_maintenance/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-23 13:18+0000\n"
-"PO-Revision-Date: 2020-01-23 14:21+0100\n"
+"POT-Creation-Date: 2020-02-04 11:43+0000\n"
+"PO-Revision-Date: 2020-02-04 12:45+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -18,10 +18,15 @@ msgstr ""
 "X-Generator: Poedit 2.0.6\n"
 
 #. module: cb_maintenance
-#: code:addons/cb_maintenance/models/maintenance_request.py:70
+#: code:addons/cb_maintenance/models/maintenance_request.py:76
 #, python-format
 msgid "%s for %s hour(s)"
 msgstr "%s durante %s hora(s)"
+
+#. module: cb_maintenance
+#: model:ir.ui.view,arch_db:cb_maintenance.wizard_close_request_form_view
+msgid "<span>Write the reason for closing this request or leave it blank.</span>"
+msgstr "<span>Escriba el motivo por el que se cierra la petición o deje el campo en blanco.</span>"
 
 #. module: cb_maintenance
 #: model:ir.model,name:cb_maintenance.model_maintenance_equipment_category
@@ -44,12 +49,14 @@ msgid "Calendar View"
 msgstr "Calendar View"
 
 #. module: cb_maintenance
+#: model:ir.ui.view,arch_db:cb_maintenance.wizard_close_request_form_view
 #: model:ir.ui.view,arch_db:cb_maintenance.wizard_create_maintenance_request_form_view
 #: model:ir.ui.view,arch_db:cb_maintenance.wizard_mass_change_stage_form_view
 msgid "Cancel"
 msgstr "Cancelar"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_plan_category_id
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_equipment_category
 msgid "Category"
 msgstr "Categoría"
@@ -63,6 +70,11 @@ msgstr "Chatter"
 #: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_request_close_datetime
 msgid "Close Date"
 msgstr "Fecha de cierre"
+
+#. module: cb_maintenance
+#: model:ir.ui.view,arch_db:cb_maintenance.wizard_close_request_form_view
+msgid "Close Request"
+msgstr "Cerrar Petición"
 
 #. module: cb_maintenance
 #: selection:maintenance.stage,state:0
@@ -87,7 +99,7 @@ msgstr "Contacto"
 #. module: cb_maintenance
 #: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_search
 msgid "Corrective Requests"
-msgstr "Corrective Requests"
+msgstr "Peticiones Correctivas"
 
 #. module: cb_maintenance
 #: model:ir.actions.act_window,name:cb_maintenance.wizard_create_maintenance_request_act_window
@@ -101,6 +113,7 @@ msgid "Create Request"
 msgstr "Nueva Petición de Mantenimiento"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_create_uid
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_create_uid
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage_create_uid
 msgid "Created by"
@@ -112,6 +125,7 @@ msgid "Created by me"
 msgstr "Creadas por mí"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_create_date
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_create_date
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage_create_date
 msgid "Created on"
@@ -125,6 +139,7 @@ msgid "Description"
 msgstr "Descripción"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_display_name
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_display_name
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage_display_name
 msgid "Display Name"
@@ -140,7 +155,7 @@ msgstr "Equipamiento"
 #. module: cb_maintenance
 #: model:ir.model.fields,help:cb_maintenance.field_maintenance_equipment_code
 msgid "Equipment Code"
-msgstr "Equipment Code"
+msgstr "Código de Equipamiento"
 
 #. module: cb_maintenance
 #: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_request_follower_id
@@ -163,29 +178,28 @@ msgid "High"
 msgstr "Alta"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_id
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_id
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage_id
 msgid "ID"
 msgstr "ID (identificación)"
 
 #. module: cb_maintenance
-#: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_form
-msgid "Issue description..."
-msgstr "Descripción de la petición..."
-
-#. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request___last_update
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request___last_update
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage___last_update
 msgid "Last Modified on"
 msgstr "Última modificación en"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_write_uid
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_write_uid
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage_write_uid
 msgid "Last Updated by"
 msgstr "Última actualización de"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_write_date
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_write_date
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage_write_date
 msgid "Last Updated on"
@@ -205,6 +219,11 @@ msgstr "Baja"
 #: model:ir.ui.view,arch_db:cb_maintenance.view_partner_form
 msgid "Maintenance"
 msgstr "Mantenimiento"
+
+#. module: cb_maintenance
+#: model:ir.model,name:cb_maintenance.model_maintenance_plan
+msgid "Maintenance Plan"
+msgstr "Plan de mantenimiento"
 
 #. module: cb_maintenance
 #: model:ir.model,name:cb_maintenance.model_maintenance_request
@@ -236,10 +255,11 @@ msgstr "Técnico"
 #. module: cb_maintenance
 #: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_search
 msgid "Managed by me"
-msgstr "Managed by me"
+msgstr "Gestionadas por mi"
 
 #. module: cb_maintenance
 #: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_request_manager_id
+#: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_search
 msgid "Manager"
 msgstr "Gestor"
 
@@ -304,7 +324,12 @@ msgid "Request Date"
 msgstr "Fecha de petición"
 
 #. module: cb_maintenance
-#: code:addons/cb_maintenance/models/maintenance_request.py:122
+#: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_form
+msgid "Request description..."
+msgstr "Descripción de la petición..."
+
+#. module: cb_maintenance
+#: code:addons/cb_maintenance/models/maintenance_request.py:128
 #, python-format
 msgid "Request reassigned to %s."
 msgstr "Petición reasignada a %s."
@@ -314,6 +339,12 @@ msgstr "Petición reasignada a %s."
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_requires_equipment
 msgid "Requires Equipment"
 msgstr "Equipamiento  Requerido"
+
+#. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_equipment_category_requires_location
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_create_maintenance_request_requires_location
+msgid "Requires Location"
+msgstr "Ubicación Requerida"
 
 #. module: cb_maintenance
 #: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_form
@@ -357,11 +388,24 @@ msgid "Set Stage"
 msgstr "Establecer Etapa"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_request_solution
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_solution
+#: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_form
+msgid "Solution"
+msgstr "Solution"
+
+#. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_request_solved_id
+msgid "Solved by"
+msgstr "Resuelta por"
+
+#. module: cb_maintenance
 #: model:ir.ui.view,arch_db:cb_maintenance.hr_equipment_request_view_form
 msgid "Split Request"
 msgstr "Dividir Petición"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_wizard_close_request_stage_id
 #: model:ir.model.fields,field_description:cb_maintenance.field_wizard_mass_change_stage_stage_id
 msgid "Stage"
 msgstr "Etapa"
@@ -379,6 +423,7 @@ msgid "State"
 msgstr "Estado"
 
 #. module: cb_maintenance
+#: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_plan_technician_id
 #: model:ir.model.fields,field_description:cb_maintenance.field_maintenance_request_technician_id
 msgid "Technician"
 msgstr "Técnico"
@@ -409,7 +454,7 @@ msgid "Tree Color"
 msgstr "Tree Color"
 
 #. module: cb_maintenance
-#: code:addons/cb_maintenance/models/maintenance_request.py:62
+#: code:addons/cb_maintenance/models/maintenance_request.py:68
 #, python-format
 msgid "Unscheduled"
 msgstr "Sin programar"
@@ -418,6 +463,16 @@ msgstr "Sin programar"
 #: selection:wizard.create.maintenance.request,priority:0
 msgid "Very High"
 msgstr "Muy Alta"
+
+#. module: cb_maintenance
+#: model:ir.ui.view,arch_db:cb_maintenance.wizard_close_request_form_view
+msgid "Wizard Close Request"
+msgstr "Wizard Close Request"
+
+#. module: cb_maintenance
+#: model:ir.model,name:cb_maintenance.model_wizard_close_request
+msgid "wizard.close.request"
+msgstr "wizard.close.request"
 
 #. module: cb_maintenance
 #: model:ir.model,name:cb_maintenance.model_wizard_create_maintenance_request
